@@ -22,7 +22,8 @@
   ~
   ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
 
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <name>QuestDB</name>
     <description>QuestDB is high performance SQL time series database</description>
@@ -32,8 +33,8 @@
         <maven.javadoc.skip>false</maven.javadoc.skip>
         <outputPath>target</outputPath>
         <runtime.assembly>none</runtime.assembly>
-        <javac.target>17</javac.target>
-        <argLine>-ea -Dfile.encoding=UTF-8 -XX:+UseParallelGC</argLine>
+        <javac.target>25</javac.target>
+        <argLine>-ea -Dfile.encoding=UTF-8 -XX:+UseParallelGC --sun-misc-unsafe-memory-access=allow --enable-native-access=ALL-UNNAMED --add-opens=java.base/java.lang=ALL-UNNAMED --add-opens=java.base/java.lang.reflect=ALL-UNNAMED --add-opens=java.base/java.nio=ALL-UNNAMED --add-opens=java.base/java.time.zone=ALL-UNNAMED</argLine>
         <test.exclude>None</test.exclude>
         <test.include>%regex[.*[^o].class]</test.include><!-- exclude module-info.class-->
         <web.console.version>1.2.1</web.console.version>
@@ -45,11 +46,10 @@
         -->
         <qdbr.rustflags>-D warnings</qdbr.rustflags>
 
-        <!-- Java ILP client version - override with -Dquestdb.client.version=1.0.1-SNAPSHOT for local dev -->
-        <questdb.client.version>1.0.1</questdb.client.version>
+        <questdb.client.version>1.2.0</questdb.client.version>
     </properties>
 
-    <version>9.3.5</version>
+    <version>9.3.6-SNAPSHOT</version>
     <groupId>org.questdb</groupId>
     <artifactId>questdb</artifactId>
     <packaging>jar</packaging>
@@ -73,7 +73,7 @@
     <scm>
         <url>scm:git:https://github.com/questdb/questdb.git</url>
         <connection>scm:git:https://github.com/questdb/questdb.git</connection>
-        <tag>9.3.5</tag>
+        <tag>9.3.1</tag>
     </scm>
 
 
@@ -206,7 +206,7 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>3.5.3</version>
                 <configuration>
-                    <forkNode implementation="org.apache.maven.plugin.surefire.extensions.SurefireForkNodeFactory" />
+                    <forkNode implementation="org.apache.maven.plugin.surefire.extensions.SurefireForkNodeFactory"/>
                     <useModulePath>true</useModulePath>
                     <includes>
                         <include>${test.include}</include>
@@ -236,9 +236,6 @@
     <profiles>
         <profile>
             <id>local-client</id>
-            <properties>
-                <questdb.client.version>1.0.1-SNAPSHOT</questdb.client.version>
-            </properties>
         </profile>
         <profile>
             <id>javadoc</id>
@@ -608,7 +605,7 @@
                     <plugin>
                         <groupId>org.jacoco</groupId>
                         <artifactId>jacoco-maven-plugin</artifactId>
-                        <version>0.8.8</version>
+                        <version>0.8.14</version>
                         <executions>
                             <execution>
                                 <id>default-prepare-agent</id>
@@ -629,10 +626,10 @@
             </build>
         </profile>
         <profile>
-            <id>java17+</id>
+            <id>java25+</id>
             <properties>
-                <jdk.version>17</jdk.version>
-                <java.enforce.version>17</java.enforce.version>
+                <jdk.version>25</jdk.version>
+                <java.enforce.version>25</java.enforce.version>
                 <questdb.artifactid>questdb</questdb.artifactid>
                 <excludePattern1>nothing-to-exclude-dummy-value-include-all-java11plus</excludePattern1>
                 <excludeTestPattern1>nothing-to-exclude-dummy-value-include-all-java11plus</excludeTestPattern1>
@@ -640,7 +637,7 @@
                 <javac.compile.target>${javac.target}</javac.compile.target>
             </properties>
             <activation>
-                <jdk>(17,)</jdk>
+                <jdk>(24,)</jdk>
             </activation>
             <dependencies>
                 <dependency>
